glx/testdata/invalid/source-missing-title.glx
# Invalid: Missing required 'title' field
sources:
  source-12345678:
    type: vital_record
